uc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> global_declaration_list
Rule 2     global_declaration_list -> global_declaration
Rule 3     global_declaration_list -> global_declaration_list global_declaration
Rule 4     global_declaration -> declaration
Rule 5     global_declaration -> function_definition
Rule 6     function_definition -> type_specifier declarator compound_statement
Rule 7     type_specifier -> VOID
Rule 8     type_specifier -> CHAR
Rule 9     type_specifier -> INT
Rule 10    declarator -> ID
Rule 11    declarator -> LPAREN declarator RPAREN
Rule 12    declarator -> declarator LBRACKET constant_expression RBRACKET
Rule 13    declarator -> declarator LBRACKET RBRACKET
Rule 14    declarator -> declarator LPAREN parameter_list RPAREN
Rule 15    declarator -> declarator LPAREN RPAREN
Rule 16    constant_expression -> binary_expression
Rule 17    binary_expression -> unary_expression
Rule 18    binary_expression -> binary_expression TIMES binary_expression
Rule 19    binary_expression -> binary_expression DIVIDE binary_expression
Rule 20    binary_expression -> binary_expression MOD binary_expression
Rule 21    binary_expression -> binary_expression PLUS binary_expression
Rule 22    binary_expression -> binary_expression MINUS binary_expression
Rule 23    binary_expression -> binary_expression LT binary_expression
Rule 24    binary_expression -> binary_expression LE binary_expression
Rule 25    binary_expression -> binary_expression GT binary_expression
Rule 26    binary_expression -> binary_expression GE binary_expression
Rule 27    binary_expression -> binary_expression EQ binary_expression
Rule 28    binary_expression -> binary_expression NE binary_expression
Rule 29    binary_expression -> binary_expression AND binary_expression
Rule 30    binary_expression -> binary_expression OR binary_expression
Rule 31    unary_expression -> postfix_expression
Rule 32    unary_expression -> unary_operator unary_expression
Rule 33    postfix_expression -> primary_expression
Rule 34    postfix_expression -> postfix_expression LPAREN RPAREN
Rule 35    postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 36    postfix_expression -> postfix_expression LPAREN argument_expression RPAREN
Rule 37    primary_expression -> ID
Rule 38    primary_expression -> LPAREN expression RPAREN
Rule 39    primary_expression -> constant
Rule 40    constant -> INT_CONST
Rule 41    constant -> CHAR_CONST
Rule 42    constant -> STRING_LITERAL
Rule 43    expression -> assignment_expression
Rule 44    expression -> expression COMMA assignment_expression
Rule 45    argument_expression -> assignment_expression
Rule 46    argument_expression -> argument_expression COMMA assignment_expression
Rule 47    assignment_expression -> binary_expression
Rule 48    assignment_expression -> unary_expression EQUALS assignment_expression
Rule 49    unary_operator -> PLUS
Rule 50    unary_operator -> MINUS
Rule 51    unary_operator -> NOT
Rule 52    parameter_list -> parameter_declaration
Rule 53    parameter_list -> parameter_list COMMA parameter_declaration
Rule 54    parameter_declaration -> type_specifier declarator
Rule 55    declaration -> type_specifier SEMI
Rule 56    declaration -> type_specifier init_declarator_list SEMI
Rule 57    init_declarator_list -> init_declarator
Rule 58    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 59    init_declarator -> declarator
Rule 60    init_declarator -> declarator EQUALS initializer
Rule 61    initializer -> assignment_expression
Rule 62    initializer -> LBRACE initializer_list RBRACE
Rule 63    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 64    initializer -> LBRACE RBRACE
Rule 65    initializer_list -> initializer
Rule 66    initializer_list -> initializer_list COMMA initializer
Rule 67    compound_statement -> LBRACE RBRACE
Rule 68    compound_statement -> LBRACE declaration_list RBRACE
Rule 69    compound_statement -> LBRACE declaration_list statement_list RBRACE
Rule 70    compound_statement -> LBRACE statement_list RBRACE
Rule 71    declaration_list -> declaration
Rule 72    declaration_list -> declaration_list declaration
Rule 73    statement_list -> statement
Rule 74    statement_list -> statement_list statement
Rule 75    statement -> expression_statement
Rule 76    statement -> compound_statement
Rule 77    statement -> selection_statement
Rule 78    statement -> iteration_statement
Rule 79    statement -> jump_statement
Rule 80    statement -> assert_statement
Rule 81    statement -> print_statement
Rule 82    statement -> read_statement
Rule 83    expression_statement -> SEMI
Rule 84    expression_statement -> expression SEMI
Rule 85    selection_statement -> IF LPAREN expression RPAREN statement
Rule 86    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 87    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 88    iteration_statement -> FOR LPAREN SEMI SEMI RPAREN statement
Rule 89    iteration_statement -> FOR LPAREN SEMI SEMI expression RPAREN statement
Rule 90    iteration_statement -> FOR LPAREN SEMI expression SEMI expression RPAREN statement
Rule 91    iteration_statement -> FOR LPAREN expression SEMI expression SEMI expression RPAREN statement
Rule 92    iteration_statement -> FOR LPAREN SEMI expression SEMI RPAREN statement
Rule 93    iteration_statement -> FOR LPAREN expression SEMI SEMI expression RPAREN statement
Rule 94    iteration_statement -> FOR LPAREN declaration SEMI RPAREN statement
Rule 95    iteration_statement -> FOR LPAREN expression SEMI SEMI RPAREN statement
Rule 96    iteration_statement -> FOR LPAREN expression SEMI expression SEMI RPAREN statement
Rule 97    iteration_statement -> FOR LPAREN declaration SEMI expression RPAREN statement
Rule 98    iteration_statement -> FOR LPAREN declaration expression SEMI expression RPAREN statement
Rule 99    iteration_statement -> FOR LPAREN declaration expression SEMI RPAREN statement
Rule 100   jump_statement -> BREAK SEMI
Rule 101   jump_statement -> RETURN expression SEMI
Rule 102   jump_statement -> RETURN SEMI
Rule 103   assert_statement -> ASSERT expression SEMI
Rule 104   print_statement -> PRINT LPAREN RPAREN SEMI
Rule 105   print_statement -> PRINT LPAREN expression RPAREN SEMI
Rule 106   read_statement -> READ LPAREN argument_expression RPAREN SEMI

Terminals, with rules where they appear

AND                  : 29
ASSERT               : 103
BREAK                : 100
CHAR                 : 8
CHAR_CONST           : 41
COMMA                : 44 46 53 58 63 66
DIVIDE               : 19
ELSE                 : 86
EQ                   : 27
EQUALS               : 48 60
FOR                  : 88 89 90 91 92 93 94 95 96 97 98 99
GE                   : 26
GT                   : 25
ID                   : 10 37
IF                   : 85 86
INT                  : 9
INT_CONST            : 40
LBRACE               : 62 63 64 67 68 69 70
LBRACKET             : 12 13 35
LE                   : 24
LPAREN               : 11 14 15 34 36 38 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 104 105 106
LT                   : 23
MINUS                : 22 50
MOD                  : 20
NE                   : 28
NOT                  : 51
OR                   : 30
PLUS                 : 21 49
PRINT                : 104 105
RBRACE               : 62 63 64 67 68 69 70
RBRACKET             : 12 13 35
READ                 : 106
RETURN               : 101 102
RPAREN               : 11 14 15 34 36 38 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 104 105 106
SEMI                 : 55 56 83 84 88 88 89 89 90 90 91 91 92 92 93 93 94 95 95 96 96 97 98 99 100 101 102 103 104 105 106
STRING_LITERAL       : 42
TIMES                : 18
VOID                 : 7
WHILE                : 87
error                : 

Nonterminals, with rules where they appear

argument_expression  : 36 46 106
assert_statement     : 80
assignment_expression : 43 44 45 46 48 61
binary_expression    : 16 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 47
compound_statement   : 6 76
constant             : 39
constant_expression  : 12
declaration          : 4 71 72 94 97 98 99
declaration_list     : 68 69 72
declarator           : 6 11 12 13 14 15 54 59 60
expression           : 35 38 44 84 85 86 87 89 90 90 91 91 91 92 93 93 95 96 96 97 98 98 99 101 103 105
expression_statement : 75
function_definition  : 5
global_declaration   : 2 3
global_declaration_list : 1 3
init_declarator      : 57 58
init_declarator_list : 56 58
initializer          : 60 65 66
initializer_list     : 62 63 66
iteration_statement  : 78
jump_statement       : 79
parameter_declaration : 52 53
parameter_list       : 14 53
postfix_expression   : 31 34 35 36
primary_expression   : 33
print_statement      : 81
program              : 0
read_statement       : 82
selection_statement  : 77
statement            : 73 74 85 86 86 87 88 89 90 91 92 93 94 95 96 97 98 99
statement_list       : 69 70 74
type_specifier       : 6 54 55 56
unary_expression     : 17 32 48
unary_operator       : 32

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . global_declaration_list
    (2) global_declaration_list -> . global_declaration
    (3) global_declaration_list -> . global_declaration_list global_declaration
    (4) global_declaration -> . declaration
    (5) global_declaration -> . function_definition
    (55) declaration -> . type_specifier SEMI
    (56) declaration -> . type_specifier init_declarator_list SEMI
    (6) function_definition -> . type_specifier declarator compound_statement
    (7) type_specifier -> . VOID
    (8) type_specifier -> . CHAR
    (9) type_specifier -> . INT

    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    INT             shift and go to state 9

    program                        shift and go to state 1
    global_declaration_list        shift and go to state 2
    global_declaration             shift and go to state 3
    declaration                    shift and go to state 4
    function_definition            shift and go to state 5
    type_specifier                 shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> global_declaration_list .
    (3) global_declaration_list -> global_declaration_list . global_declaration
    (4) global_declaration -> . declaration
    (5) global_declaration -> . function_definition
    (55) declaration -> . type_specifier SEMI
    (56) declaration -> . type_specifier init_declarator_list SEMI
    (6) function_definition -> . type_specifier declarator compound_statement
    (7) type_specifier -> . VOID
    (8) type_specifier -> . CHAR
    (9) type_specifier -> . INT

    $end            reduce using rule 1 (program -> global_declaration_list .)
    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    INT             shift and go to state 9

    global_declaration             shift and go to state 10
    declaration                    shift and go to state 4
    function_definition            shift and go to state 5
    type_specifier                 shift and go to state 6

state 3

    (2) global_declaration_list -> global_declaration .

    VOID            reduce using rule 2 (global_declaration_list -> global_declaration .)
    CHAR            reduce using rule 2 (global_declaration_list -> global_declaration .)
    INT             reduce using rule 2 (global_declaration_list -> global_declaration .)
    $end            reduce using rule 2 (global_declaration_list -> global_declaration .)


state 4

    (4) global_declaration -> declaration .

    VOID            reduce using rule 4 (global_declaration -> declaration .)
    CHAR            reduce using rule 4 (global_declaration -> declaration .)
    INT             reduce using rule 4 (global_declaration -> declaration .)
    $end            reduce using rule 4 (global_declaration -> declaration .)


state 5

    (5) global_declaration -> function_definition .

    VOID            reduce using rule 5 (global_declaration -> function_definition .)
    CHAR            reduce using rule 5 (global_declaration -> function_definition .)
    INT             reduce using rule 5 (global_declaration -> function_definition .)
    $end            reduce using rule 5 (global_declaration -> function_definition .)


state 6

    (55) declaration -> type_specifier . SEMI
    (56) declaration -> type_specifier . init_declarator_list SEMI
    (6) function_definition -> type_specifier . declarator compound_statement
    (57) init_declarator_list -> . init_declarator
    (58) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (10) declarator -> . ID
    (11) declarator -> . LPAREN declarator RPAREN
    (12) declarator -> . declarator LBRACKET constant_expression RBRACKET
    (13) declarator -> . declarator LBRACKET RBRACKET
    (14) declarator -> . declarator LPAREN parameter_list RPAREN
    (15) declarator -> . declarator LPAREN RPAREN
    (59) init_declarator -> . declarator
    (60) init_declarator -> . declarator EQUALS initializer

    SEMI            shift and go to state 11
    ID              shift and go to state 15
    LPAREN          shift and go to state 16

    init_declarator_list           shift and go to state 12
    declarator                     shift and go to state 13
    init_declarator                shift and go to state 14

state 7

    (7) type_specifier -> VOID .

    SEMI            reduce using rule 7 (type_specifier -> VOID .)
    ID              reduce using rule 7 (type_specifier -> VOID .)
    LPAREN          reduce using rule 7 (type_specifier -> VOID .)


state 8

    (8) type_specifier -> CHAR .

    SEMI            reduce using rule 8 (type_specifier -> CHAR .)
    ID              reduce using rule 8 (type_specifier -> CHAR .)
    LPAREN          reduce using rule 8 (type_specifier -> CHAR .)


state 9

    (9) type_specifier -> INT .

    SEMI            reduce using rule 9 (type_specifier -> INT .)
    ID              reduce using rule 9 (type_specifier -> INT .)
    LPAREN          reduce using rule 9 (type_specifier -> INT .)


state 10

    (3) global_declaration_list -> global_declaration_list global_declaration .

    VOID            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    CHAR            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    INT             reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    $end            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)


state 11

    (55) declaration -> type_specifier SEMI .

    VOID            reduce using rule 55 (declaration -> type_specifier SEMI .)
    CHAR            reduce using rule 55 (declaration -> type_specifier SEMI .)
    INT             reduce using rule 55 (declaration -> type_specifier SEMI .)
    $end            reduce using rule 55 (declaration -> type_specifier SEMI .)
    RBRACE          reduce using rule 55 (declaration -> type_specifier SEMI .)
    SEMI            reduce using rule 55 (declaration -> type_specifier SEMI .)
    LBRACE          reduce using rule 55 (declaration -> type_specifier SEMI .)
    IF              reduce using rule 55 (declaration -> type_specifier SEMI .)
    WHILE           reduce using rule 55 (declaration -> type_specifier SEMI .)
    FOR             reduce using rule 55 (declaration -> type_specifier SEMI .)
    BREAK           reduce using rule 55 (declaration -> type_specifier SEMI .)
    RETURN          reduce using rule 55 (declaration -> type_specifier SEMI .)
    ASSERT          reduce using rule 55 (declaration -> type_specifier SEMI .)
    PRINT           reduce using rule 55 (declaration -> type_specifier SEMI .)
    READ            reduce using rule 55 (declaration -> type_specifier SEMI .)
    PLUS            reduce using rule 55 (declaration -> type_specifier SEMI .)
    MINUS           reduce using rule 55 (declaration -> type_specifier SEMI .)
    NOT             reduce using rule 55 (declaration -> type_specifier SEMI .)
    ID              reduce using rule 55 (declaration -> type_specifier SEMI .)
    LPAREN          reduce using rule 55 (declaration -> type_specifier SEMI .)
    INT_CONST       reduce using rule 55 (declaration -> type_specifier SEMI .)
    CHAR_CONST      reduce using rule 55 (declaration -> type_specifier SEMI .)
    STRING_LITERAL  reduce using rule 55 (declaration -> type_specifier SEMI .)


state 12

    (56) declaration -> type_specifier init_declarator_list . SEMI
    (58) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMI            shift and go to state 17
    COMMA           shift and go to state 18


state 13

    (6) function_definition -> type_specifier declarator . compound_statement
    (12) declarator -> declarator . LBRACKET constant_expression RBRACKET
    (13) declarator -> declarator . LBRACKET RBRACKET
    (14) declarator -> declarator . LPAREN parameter_list RPAREN
    (15) declarator -> declarator . LPAREN RPAREN
    (59) init_declarator -> declarator .
    (60) init_declarator -> declarator . EQUALS initializer
    (67) compound_statement -> . LBRACE RBRACE
    (68) compound_statement -> . LBRACE declaration_list RBRACE
    (69) compound_statement -> . LBRACE declaration_list statement_list RBRACE
    (70) compound_statement -> . LBRACE statement_list RBRACE

    LBRACKET        shift and go to state 20
    LPAREN          shift and go to state 21
    SEMI            reduce using rule 59 (init_declarator -> declarator .)
    COMMA           reduce using rule 59 (init_declarator -> declarator .)
    EQUALS          shift and go to state 22
    LBRACE          shift and go to state 23

    compound_statement             shift and go to state 19

state 14

    (57) init_declarator_list -> init_declarator .

    SEMI            reduce using rule 57 (init_declarator_list -> init_declarator .)
    COMMA           reduce using rule 57 (init_declarator_list -> init_declarator .)


state 15

    (10) declarator -> ID .

    LBRACKET        reduce using rule 10 (declarator -> ID .)
    LPAREN          reduce using rule 10 (declarator -> ID .)
    EQUALS          reduce using rule 10 (declarator -> ID .)
    LBRACE          reduce using rule 10 (declarator -> ID .)
    SEMI            reduce using rule 10 (declarator -> ID .)
    COMMA           reduce using rule 10 (declarator -> ID .)
    RPAREN          reduce using rule 10 (declarator -> ID .)


state 16

    (11) declarator -> LPAREN . declarator RPAREN
    (10) declarator -> . ID
    (11) declarator -> . LPAREN declarator RPAREN
    (12) declarator -> . declarator LBRACKET constant_expression RBRACKET
    (13) declarator -> . declarator LBRACKET RBRACKET
    (14) declarator -> . declarator LPAREN parameter_list RPAREN
    (15) declarator -> . declarator LPAREN RPAREN

    ID              shift and go to state 15
    LPAREN          shift and go to state 16

    declarator                     shift and go to state 24

state 17

    (56) declaration -> type_specifier init_declarator_list SEMI .

    VOID            reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    CHAR            reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    INT             reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    $end            reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    RBRACE          reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    SEMI            reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    LBRACE          reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    IF              reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    WHILE           reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    FOR             reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    BREAK           reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    RETURN          reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    ASSERT          reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    PRINT           reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    READ            reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    PLUS            reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    MINUS           reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    NOT             reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    ID              reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    LPAREN          reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    INT_CONST       reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    CHAR_CONST      reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)
    STRING_LITERAL  reduce using rule 56 (declaration -> type_specifier init_declarator_list SEMI .)


state 18

    (58) init_declarator_list -> init_declarator_list COMMA . init_declarator
    (59) init_declarator -> . declarator
    (60) init_declarator -> . declarator EQUALS initializer
    (10) declarator -> . ID
    (11) declarator -> . LPAREN declarator RPAREN
    (12) declarator -> . declarator LBRACKET constant_expression RBRACKET
    (13) declarator -> . declarator LBRACKET RBRACKET
    (14) declarator -> . declarator LPAREN parameter_list RPAREN
    (15) declarator -> . declarator LPAREN RPAREN

    ID              shift and go to state 15
    LPAREN          shift and go to state 16

    init_declarator                shift and go to state 25
    declarator                     shift and go to state 26

state 19

    (6) function_definition -> type_specifier declarator compound_statement .

    VOID            reduce using rule 6 (function_definition -> type_specifier declarator compound_statement .)
    CHAR            reduce using rule 6 (function_definition -> type_specifier declarator compound_statement .)
    INT             reduce using rule 6 (function_definition -> type_specifier declarator compound_statement .)
    $end            reduce using rule 6 (function_definition -> type_specifier declarator compound_statement .)


state 20

    (12) declarator -> declarator LBRACKET . constant_expression RBRACKET
    (13) declarator -> declarator LBRACKET . RBRACKET
    (16) constant_expression -> . binary_expression
    (17) binary_expression -> . unary_expression
    (18) binary_expression -> . binary_expression TIMES binary_expression
    (19) binary_expression -> . binary_expression DIVIDE binary_expression
    (20) binary_expression -> . binary_expression MOD binary_expression
    (21) binary_expression -> . binary_expression PLUS binary_expression
    (22) binary_expression -> . binary_expression MINUS binary_expression
    (23) binary_expression -> . binary_expression LT binary_expression
    (24) binary_expression -> . binary_expression LE binary_expression
    (25) binary_expression -> . binary_expression GT binary_expression
    (26) binary_expression -> . binary_expression GE binary_expression
    (27) binary_expression -> . binary_expression EQ binary_expression
    (28) binary_expression -> . binary_expression NE binary_expression
    (29) binary_expression -> . binary_expression AND binary_expression
    (30) binary_expression -> . binary_expression OR binary_expression
    (31) unary_expression -> . postfix_expression
    (32) unary_expression -> . unary_operator unary_expression
    (33) postfix_expression -> . primary_expression
    (34) postfix_expression -> . postfix_expression LPAREN RPAREN
    (35) postfix_expression -> . postfix_expression LBRACKET expression RBRACKET
    (36) postfix_expression -> . postfix_expression LPAREN argument_expression RPAREN
    (49) unary_operator -> . PLUS
    (50) unary_operator -> . MINUS
    (51) unary_operator -> . NOT
    (37) primary_expression -> . ID
    (38) primary_expression -> . LPAREN expression RPAREN
    (39) primary_expression -> . constant
    (40) constant -> . INT_CONST
    (41) constant -> . CHAR_CONST
    (42) constant -> . STRING_LITERAL

    RBRACKET        shift and go to state 28
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    NOT             shift and go to state 37
    ID              shift and go to state 38
    LPAREN          shift and go to state 36
    INT_CONST       shift and go to state 40
    CHAR_CONST      shift and go to state 41
    STRING_LITERAL  shift and go to state 42

    constant_expression            shift and go to state 27
    binary_expression              shift and go to state 29
    unary_expression               shift and go to state 30
    postfix_expression             shift and go to state 33
    unary_operator                 shift and go to state 34
    primary_expression             shift and go to state 35
    constant                       shift and go to state 39

state 21

    (14) declarator -> declarator LPAREN . parameter_list RPAREN
    (15) declarator -> declarator LPAREN . RPAREN
    (52) parameter_list -> . parameter_declaration
    (53) parameter_list -> . parameter_list COMMA parameter_declaration
    (54) parameter_declaration -> . type_specifier declarator
    (7) type_specifier -> . VOID
    (8) type_specifier -> . CHAR
    (9) type_specifier -> . INT

    RPAREN          shift and go to state 44
    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    INT             shift and go to state 9

    parameter_list                 shift and go to state 43
    parameter_declaration          shift and go to state 45
    type_specifier                 shift and go to state 46

state 22

    (60) init_declarator -> declarator EQUALS . initializer
    (61) initializer -> . assignment_expression
    (62) initializer -> . LBRACE initializer_list RBRACE
    (63) initializer -> . LBRACE initializer_list COMMA RBRACE
    (64) initializer -> . LBRACE RBRACE
    (47) assignment_expression -> . binary_expression
    (48) assignment_expression -> . unary_expression EQUALS assignment_expression
    (17) binary_expression -> . unary_expression
    (18) binary_expression -> . binary_expression TIMES binary_expression
    (19) binary_expression -> . binary_expression DIVIDE binary_expression
    (20) binary_expression -> . binary_expression MOD binary_expression
    (21) binary_expression -> . binary_expression PLUS binary_expression
    (22) binary_expression -> . binary_expression MINUS binary_expression
    (23) binary_expression -> . binary_expression LT binary_expression
    (24) binary_expression -> . binary_expression LE binary_expression
    (25) binary_expression -> . binary_expression GT binary_expression
    (26) binary_expression -> . binary_expression GE binary_expression
    (27) binary_expression -> . binary_expression EQ binary_expression
    (28) binary_expression -> . binary_expression NE binary_expression
    (29) binary_expression -> . binary_expression AND binary_expression
    (30) binary_expression -> . binary_expression OR binary_expression
    (31) unary_expression -> . postfix_expression
    (32) unary_expression -> . unary_operator unary_expression
    (33) postfix_expression -> . primary_expression
    (34) postfix_expression -> . postfix_expression LPAREN RPAREN
    (35) postfix_expression -> . postfix_expression LBRACKET expression RBRACKET
    (36) postfix_expression -> . postfix_expression LPAREN argument_expression RPAREN
    (49) unary_operator -> . PLUS
    (50) unary_operator -> . MINUS
    (51) unary_operator -> . NOT
    (37) primary_expression -> . ID
    (38) primary_expression -> . LPAREN expression RPAREN
    (39) primary_expression -> . constant
    (40) constant -> . INT_CONST
    (41) constant -> . CHAR_CONST
    (42) constant -> . STRING_LITERAL

    LBRACE          shift and go to state 49
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    NOT             shift and go to state 37
    ID              shift and go to state 38
    LPAREN          shift and go to state 36
    INT_CONST       shift and go to state 40
    CHAR_CONST      shift and go to state 41
    STRING_LITERAL  shift and go to state 42

    initializer                    shift and go to state 47
    assignment_expression          shift and go to state 48
    binary_expression              shift and go to state 50
    unary_expression               shift and go to state 51
    postfix_expression             shift and go to state 33
    unary_operator                 shift and go to state 34
    primary_expression             shift and go to state 35
    constant                       shift and go to state 39

state 23

    (67) compound_statement -> LBRACE . RBRACE
    (68) compound_statement -> LBRACE . declaration_list RBRACE
    (69) compound_statement -> LBRACE . declaration_list statement_list RBRACE
    (70) compound_statement -> LBRACE . statement_list RBRACE
    (71) declaration_list -> . declaration
    (72) declaration_list -> . declaration_list declaration
    (73) statement_list -> . statement
    (74) statement_list -> . statement_list statement
    (55) declaration -> . type_specifier SEMI
    (56) declaration -> . type_specifier init_declarator_list SEMI
    (75) statement -> . expression_statement
    (76) statement -> . compound_statement
    (77) statement -> . selection_statement
    (78) statement -> . iteration_statement
    (79) statement -> . jump_statement
    (80) statement -> . assert_statement
    (81) statement -> . print_statement
    (82) statement -> . read_statement
    (7) type_specifier -> . VOID
    (8) type_specifier -> . CHAR
    (9) type_specifier -> . INT
    (83) expression_statement -> . SEMI
    (84) expression_statement -> . expression SEMI
    (67) compound_statement -> . LBRACE RBRACE
    (68) compound_statement -> . LBRACE declaration_list RBRACE
    (69) compound_statement -> . LBRACE declaration_list statement_list RBRACE
    (70) compound_statement -> . LBRACE statement_list RBRACE
    (85) selection_statement -> . IF LPAREN expression RPAREN statement
    (86) selection_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (87) iteration_statement -> . WHILE LPAREN expression RPAREN statement
    (88) iteration_statement -> . FOR LPAREN SEMI SEMI RPAREN statement
    (89) iteration_statement -> . FOR LPAREN SEMI SEMI expression RPAREN statement
    (90) iteration_statement -> . FOR LPAREN SEMI expression SEMI expression RPAREN statement
    (91) iteration_statement -> . FOR LPAREN expression SEMI expression SEMI expression RPAREN statement
    (92) iteration_statement -> . FOR LPAREN SEMI expression SEMI RPAREN statement
    (93) iteration_statement -> . FOR LPAREN expression SEMI SEMI expression RPAREN statement
    (94) iteration_statement -> . FOR LPAREN declaration SEMI RPAREN statement
    (95) iteration_statement -> . FOR LPAREN expression SEMI SEMI RPAREN statement
    (96) iteration_statement -> . FOR LPAREN expression SEMI expression SEMI RPAREN statement
    (97) iteration_statement -> . FOR LPAREN declaration SEMI expression RPAREN statement
    (98) iteration_statement -> . FOR LPAREN declaration expression SEMI expression RPAREN statement
    (99) iteration_statement -> . FOR LPAREN declaration expression SEMI RPAREN statement
    (100) jump_statement -> . BREAK SEMI
    (101) jump_statement -> . RETURN expression SEMI
    (102) jump_statement -> . RETURN SEMI
    (103) assert_statement -> . ASSERT expression SEMI
    (104) print_statement -> . PRINT LPAREN RPAREN SEMI
    (105) print_statement -> . PRINT LPAREN expression RPAREN SEMI
    (106) read_statement -> . READ LPAREN argument_expression RPAREN SEMI
    (43) expression -> . assignment_expression
    (44) expression -> . expression COMMA assignment_expression
    (47) assignment_expression -> . binary_expression
    (48) assignment_expression -> . unary_expression EQUALS assignment_expression
    (17) binary_expression -> . unary_expression
    (18) binary_expression -> . binary_expression TIMES binary_expression
    (19) binary_expression -> . binary_expression DIVIDE binary_expression
    (20) binary_expression -> . binary_expression MOD binary_expression
    (21) binary_expression -> . binary_expression PLUS binary_expression
    (22) binary_expression -> . binary_expression MINUS binary_expression
    (23) binary_expression -> . binary_expression LT binary_expression
    (24) binary_expression -> . binary_expression LE binary_expression
    (25) binary_expression -> . binary_expression GT binary_expression
    (26) binary_expression -> . binary_expression GE binary_expression
    (27) binary_expression -> . binary_expression EQ binary_expression
    (28) binary_expression -> . binary_expression NE binary_expression
    (29) binary_expression -> . binary_expression AND binary_expression
    (30) binary_expression -> . binary_expression OR binary_expression
    (31) unary_expression -> . postfix_expression
    (32) unary_expression -> . unary_operator unary_expression
    (33) postfix_expression -> . primary_expression
    (34) postfix_expression -> . postfix_expression LPAREN RPAREN
    (35) postfix_expression -> . postfix_expression LBRACKET expression RBRACKET
    (36) postfix_expression -> . postfix_expression LPAREN argument_expression RPAREN
    (49) unary_operator -> . PLUS
    (50) unary_operator -> . MINUS
    (51) unary_operator -> . NOT
    (37) primary_expression -> . ID
    (38) primary_expression -> . LPAREN expression RPAREN
    (39) primary_expression -> . constant
    (40) constant -> . INT_CONST
    (41) constant -> . CHAR_CONST
    (42) constant -> . STRING_LITERAL

    RBRACE          shift and go to state 52
    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    INT             shift and go to state 9
    SEMI            shift and go to state 58
    LBRACE          shift and go to state 23
    IF              shift and go to state 68
    WHILE           shift and go to state 69
    FOR             shift and go to state 70
    BREAK           shift and go to state 71
    RETURN          shift and go to state 72
    ASSERT          shift and go to state 73
    PRINT           shift and go to state 74
    READ            shift and go to state 75
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    NOT             shift and go to state 37
    ID              shift and go to state 38
    LPAREN          shift and go to state 36
    INT_CONST       shift and go to state 40
    CHAR_CONST      shift and go to state 41
    STRING_LITERAL  shift and go to state 42

    declaration_list               shift and go to state 53
    statement_list                 shift and go to state 54
    declaration                    shift and go to state 55
    statement                      shift and go to state 56
    type_specifier                 shift and go to state 57
    expression_statement           shift and go to state 59
    compound_statement             shift and go to state 60
    selection_statement            shift and go to state 61
    iteration_statement            shift and go to state 62
    jump_statement                 shift and go to state 63
    assert_statement               shift and go to state 64
    print_statement                shift and go to state 65
    read_statement                 shift and go to state 66
    expression                     shift and go to state 67
    assignment_expression          shift and go to state 76
    binary_expression              shift and go to state 50
    unary_expression               shift and go to state 51
    postfix_expression             shift and go to state 33
    unary_operator                 shift and go to state 34
    primary_expression             shift and go to state 35
    constant                       shift and go to state 39

state 24

    (11) declarator -> LPAREN declarator . RPAREN
    (12) declarator -> declarator . LBRACKET constant_expression RBRACKET
    (13) declarator -> declarator . LBRACKET RBRACKET
    (14) declarator -> declarator . LPAREN parameter_list RPAREN
    (15) declarator -> declarator . LPAREN RPAREN

    RPAREN          shift and go to state 77
    LBRACKET        shift and go to state 20
    LPAREN          shift and go to state 21


state 25

    (58) init_declarator_list -> init_declarator_list COMMA init_declarator .

    SEMI            reduce using rule 58 (init_declarator_list -> init_declarator_list COMMA init_declarator .)
    COMMA           reduce using rule 58 (init_declarator_list -> init_declarator_list COMMA init_declarator .)


state 26

    (59) init_declarator -> declarator .
    (60) init_declarator -> declarator . EQUALS initializer
    (12) declarator -> declarator . LBRACKET constant_expression RBRACKET
